@dev #上个文件的补充

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,19 @@ crashlytics-build.properties
 2DUnityFarm/Temp/
 2DUnityFarm/Assets/PlayMaker/
 2DUnityFarm/Assets/QFramework/
+2DUnityFarm/Assets/PlayMaker.meta
+2DUnityFarm/Assets/Plugins.meta
+2DUnityFarm/Assets/Plugins/PlayMaker.meta
+2DUnityFarm/Assets/Plugins/PlayMaker/WebGL.meta
+2DUnityFarm/Assets/Plugins/PlayMaker/WP8.meta
+2DUnityFarm/Assets/Plugins/PlayMaker/WebGL/PlayMaker.dll
+2DUnityFarm/Assets/Plugins/PlayMaker/WebGL/PlayMaker.dll.meta
+2DUnityFarm/Assets/Plugins/PlayMaker/WP8/PlayMaker.dll
+2DUnityFarm/Assets/Plugins/PlayMaker/WP8/PlayMaker.dll.meta
+2DUnityFarm/obj/Debug/Assembly-CSharp.csproj.AssemblyReference.cache
+2DUnityFarm/obj/Debug/AudioKit.csproj.AssemblyReference.cache
+2DUnityFarm/obj/Debug/ResKit.Editor.csproj.AssemblyReference.cache
+2DUnityFarm/Packages/manifest.json
+2DUnityFarm/Packages/packages-lock.json
+2DUnityFarm/ProjectSettings/PackageManagerSettings.asset
+2DUnityFarm/ProjectSettings/ProjectVersion.txt
